small alignment fix

--- a/frontend_nextjs/styles/studentListelement.css
+++ b/frontend_nextjs/styles/studentListelement.css
@@ -117,8 +117,7 @@
 }
 
 .upper-layer {
-    margin: 0;
-    margin-right: 5px;
+    margin: 0 5px 0 0;
 }
 
 .nomargin {
